add icons and such

--- a/app/assets/stylesheets/producer_templates.css.scss
+++ b/app/assets/stylesheets/producer_templates.css.scss
@@ -10,6 +10,7 @@ $spray: rgba(129, 207, 224, 1.0);
 $wax: rgba(241, 169, 160, 1.0);
 $superlime: rgba(200, 247, 197, 1.0);
 $body: rgba(255, 236, 219, 1.0);
+$break-small: 600px;
 
 // -- Whisky Profile Show --
 
@@ -27,6 +28,9 @@ $body: rgba(255, 236, 219, 1.0);
   color: lighten($curious-blue, 30%);
   text-align: center;
   min-height: 450px;
+  @media screen and (max-width: $break-small) {
+    border-radius: 0;
+  }
 }
 .info-text {
   padding: 1em;
@@ -58,6 +62,9 @@ html .flavor-graph {
   border-radius: 0 0 10px 0;
   background: lighten($curious-blue, 10%);
   margin-top: 10px;
+  @media screen and (max-width: $break-small) {
+    border-radius: 0;
+  }
   .sidebar {
     background: $ebony;
     width: 20%;
