--- a/app/views/whisky_templates/index.html.erb
+++ b/app/views/whisky_templates/index.html.erb
@@ -25,11 +25,11 @@
   <div class="col-sm-12 data-table">
     <div class="controls">
       <div class="btn-group">
-        <label class="btn btn-primary" ng-model="results.sortBy" btn-radio="'-price'" uncheckable>Most Expensive</label>
-        <label class="btn btn-primary" ng-model="results.sortBy" btn-radio="'-rating'" uncheckable>Highest Rated</label>
+        <label class="btn btn-primary" ng-model="results.sortBy" btn-radio="'-price'" uncheckable><i class="fa fa-money"></i> Most Expensive</label>
+        <label class="btn btn-primary" ng-model="results.sortBy" btn-radio="'-rating'" uncheckable><i class="fa fa-thumbs-o-up"></i> Highest Rated</label>
       </div>
 
-      <button class="btn btn-primary pull-right space-left" ng-model="results.showChart" btn-radio="'true'" uncheckable>Show Graph</button>
+      <button class="btn btn-primary pull-right space-left" ng-model="results.showChart" btn-radio="'true'" uncheckable><i class="fa fa-area-chart"></i> Show Graph</button>
       <button class="btn btn-default pull-right" ng-click="results.getAllWhiskies()">Reset Results</button>
     </div>
     <div class="chart-wrapper" id="bubble-chart" bubble-chart="results.visibleWhiskies" ng-show="results.showChart"></div>
