--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,7 @@
 <head>
   <title>Scotch2</title>
   <link href='http://fonts.googleapis.com/css?family=Arimo:400,700,400italic|Racing+Sans+One' rel='stylesheet' type='text/css'>
+  <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
@@ -12,5 +13,6 @@
     <%= render "sites/nav" %>
   <div ng-view></div>
   </div>
+  <%= render "sites/footer" %>
 </body>
 </html>
