--- a/app/views/sites/_nav.html.erb
+++ b/app/views/sites/_nav.html.erb
@@ -1,3 +1,11 @@
 <header class="page-header">
-  <div class="logo">ScotchyScotchMe</div>
+  <div class="header-top">
+    <div class="pull-left small-text"><a href="http://scotchme.herokuapp.com">Explore by flavor profile on ScotchMe</a></div>
+    <div class="pull-right small-text"><a href="javascript:void(0)"><i class="fa fa-circle-o"></i> Signup</a> | <a href="javascript:void(0)"><i class="fa fa-circle"></i> Login</a></div>
+  </div>
+  <div class="logo">
+
+    <span class="text-center">Scotchy<span class="scotchme">ScotchMe</span></span>
+
+  </div>
 </header>
