--- a/app/assets/stylesheets/sites.css.scss
+++ b/app/assets/stylesheets/sites.css.scss
@@ -10,7 +10,7 @@ $link: rgba(243, 156, 18, 1.0);
 
 body {
   font-family: 'Arimo';
-  background: lighten($body, 5%);
+  background: lighten($ebony, 75%);
 }
 
 a {
