--- a/app/assets/stylesheets/whisky_templates.css.scss
+++ b/app/assets/stylesheets/whisky_templates.css.scss
@@ -84,7 +84,7 @@ $lynch: rgba(108, 122, 137, 1.0);
   background: white;
   padding: 1em;
   border-radius: 10px;
-  border: 1px solid rgba($wax, 0.25);
+  border: 1px solid rgba($ebony, 0.1);
 }
 
 
