--- a/app/views/producer_templates/show.html.erb
+++ b/app/views/producer_templates/show.html.erb
@@ -21,6 +21,7 @@
     <div class="col-sm-8">
       <div class="flavor-graph-bg">
         <div class="sidebar">
+          <div class="top-bar"></div>
           <h3>Flavor Profile</h3>
         </div>
         <div class="flavor-graph">
