--- a/app/views/sites/_nav.html.erb
+++ b/app/views/sites/_nav.html.erb
@@ -1,6 +1,6 @@
 <header class="page-header">
   <div class="header-top">
-    <div class="pull-left small-text"><a href="http://scotchme.herokuapp.com">Explore by flavor profile on ScotchMe</a></div>
+    <div class="pull-left small-text"><a href="http://scotchme.herokuapp.com"><i class="fa fa-hand-o-right"></i> Explore Scotch by flavor profile on ScotchMe</a></div>
     <div class="pull-right small-text"><a href="javascript:void(0)"><i class="fa fa-circle-o"></i> Signup</a> | <a href="javascript:void(0)"><i class="fa fa-circle"></i> Login</a></div>
   </div>
   <div class="logo">
