--- a/app/views/whisky_templates/show.html.erb
+++ b/app/views/whisky_templates/show.html.erb
@@ -21,6 +21,13 @@
       </div>
     </div><!-- /.col -->
     <div class="col-sm-6 flavor-profile">
+      <div class="flavor-graph-bg whisky">
+        <div class="sidebar">
+          <div class="top-bar"></div>
+          <!-- <h3>Flavor Profile</h3> -->
+        </div>
+        <p class="coming-soon">Whisky flavor profiles coming soon!</p>
+      </div>
     </div>
   </div><!-- /.row -->
 
