--- a/app/views/producer_templates/show.html.erb
+++ b/app/views/producer_templates/show.html.erb
@@ -6,8 +6,8 @@
         <a class="btn btn-default pull-right" href="/"><i class="fa fa-heart-o"></i> Add to Favorites</a>
       </div>
       <div class="info-text">
-        <div class="producer-image-wrapper">
-          <img src="{{producer.image_url}}" alt="{{producer.name}}">
+        <div class="producer-img-wrapper">
+          <img class="producer-img text-center" src="{{producer.image_url}}" alt="{{producer.name}}">
         </div>
         <div class="producer-text-wrapper">
           <h2><a href="{{producer.url}}">{{producer.name}}</a></h2>
