--- a/app/views/sites/_nav.html.erb
+++ b/app/views/sites/_nav.html.erb
@@ -5,7 +5,8 @@
   </div>
   <div class="logo">
 
-    <span class="text-center">Scotchy<span class="scotchme">ScotchMe</span></span>
+    <h1 class="text-center">Scotchy<span class="scotchme">ScotchMe</span></h1>
+    <p>Explore Scotch by region, producer, rating and price</p>
 
   </div>
 </header>
