--- a/app/assets/stylesheets/sites.css.scss
+++ b/app/assets/stylesheets/sites.css.scss
@@ -40,6 +40,11 @@ h2 {
     text-align: center;
     font-family: 'Racing Sans One', sans-serif;
     padding: 0.33em;
+    p {
+      font-family: 'Arimo', sans-serif;
+      font-weight: normal;
+      font-size: 16px;
+    }
     .scotchme {
       font-family: 'Arimo', sans-serif;
     }
