--- a/app/views/sites/_nav.html.erb
+++ b/app/views/sites/_nav.html.erb
@@ -4,8 +4,7 @@
     <div class="pull-right small-text"><a href="javascript:void(0)"><i class="fa fa-circle-o"></i> Signup</a> | <a href="javascript:void(0)"><i class="fa fa-circle"></i> Login</a></div>
   </div>
   <div class="logo">
-
-    <h1 class="text-center">Scotchy<span class="scotchme">ScotchMe</span></h1>
+    <h1 class="text-center"><a href="/">Scotchy<span class="scotchme">ScotchMe</span></a></h1>
     <p>Explore Scotch by region, producer, rating and price</p>
 
   </div>
