--- a/app/views/producer_templates/show.html.erb
+++ b/app/views/producer_templates/show.html.erb
@@ -21,8 +21,10 @@
     <div class="col-sm-8">
       <div class="flavor-graph-bg">
         <div class="sidebar">
-          <div class="top-bar"></div>
-          <h3>Flavor Profile</h3>
+          <div class="top-bar">
+            <h3>Flavor Profile</h3>
+          </div>
+
         </div>
         <div class="flavor-graph">
           <div ng-repeat="item in flavorNums" class="drop drop{{item[1]}} move-drops" data-value="{{item[1]}}" data-key="{{item[0]}}">
