some more styling

--- a/app/views/whisky_templates/show.html.erb
+++ b/app/views/whisky_templates/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container" ng-controller="ShowWhiskyCtrl">
 
   <div class="row">
-    <div class="col-sm-6 info">
+    <div class="col-md-6 info">
       <div>
 
           <div class="profile-buttons">
@@ -20,7 +20,7 @@
         </div>
       </div>
     </div><!-- /.col -->
-    <div class="col-sm-6 flavor-profile">
+    <div class="col-md-6 flavor-profile">
       <div class="flavor-graph-bg whisky">
         <div class="sidebar">
           <div class="top-bar"></div>
