--- a/app/assets/stylesheets/sites.css.scss
+++ b/app/assets/stylesheets/sites.css.scss
@@ -21,7 +21,9 @@ a {
 }
 
 h2 {
-  font-family: 'Racing Sans One', sans-serif;
+  font-family: 'Forum', sans-serif;
+  text-transform: uppercase;
+  font-size: 3em;
 }
 
 .page-header {
@@ -37,8 +39,9 @@ h2 {
   .logo {
     margin: 0 auto;
     text-align: center;
-    font-family: 'Racing Sans One', sans-serif;
+    font-family: 'Forum', sans-serif;
     padding: 0.33em;
+
     a {
       &:hover {
         text-decoration: none;
@@ -46,18 +49,31 @@ h2 {
     }
     h1 {
       font-size: 4em;
+      font-style: oblique;
+      font-weight: bold;
+      @media screen and (max-width: 600px) {
+        font-size: 3em;
+      }
     }
     p {
       font-family: 'Arimo', sans-serif;
       font-weight: normal;
       font-size: 16px;
+      margin-top: -0.5em;
+      color: lighten($ebony, 40%);
     }
     .scotchme {
       font-family: 'Arimo', sans-serif;
+      font-style: normal;
     }
     .small-text {
       font-family: 'Arimo', sans-serif;
       font-size: 0.5em;
+      @media screen and (max-width: 600px) {
+        text-align: center;
+        float: none;
+        clear: both;
+      }
     }
   }
 }
