--- a/app/assets/templates/whisky_show.html
+++ b/app/assets/templates/whisky_show.html
@@ -6,7 +6,7 @@
 </div><!-- /.row -->
 
 <div class="row">
-  <div class="col-sm-6">
+  <div class="col-md-6">
     <div ng-controller="ShowWhiskyCtrl">
       <h1>Whisky show in public</h1>
       <div class="info">
@@ -21,7 +21,7 @@
       </div>
     </div>
   </div><!-- /.col -->
-  <div class="col-sm-6 flavor-profile">
+  <div class="col-md-6 flavor-profile">
     <h3>Flavor Profiles</h3>
     <div ng-repeat="(key, val) in whisky.flavor_profiles">
       <div>{{key}}: {{val}}</div>
