--- a/app/views/whisky_templates/index.html.erb
+++ b/app/views/whisky_templates/index.html.erb
@@ -4,6 +4,8 @@
   <div class="row">
     <div class="col-sm-12 regions map">
       <div class="map-bg">
+        <!-- <object class="map-bg-svg" type="image/svg+xml" data="/images/whisky-region-map-bg.svg" class="map background">
+        </object> -->
         <div class="" ng-controller="RegionsCtrl">
           <div ng-repeat="region in regions" class="region {{region.name}}">
             <h3>{{region.name}}</h3>
