--- a/app/views/whisky_templates/index.html.erb
+++ b/app/views/whisky_templates/index.html.erb
@@ -39,11 +39,11 @@
 
     <table class="table table-hover">
       <thead>
-        <th>Region</th>
-        <th>Producer</th>
-        <th>Name</th>
-        <th>Rating</th>
-        <th>Price</th>
+        <th ng-click="results.toggleSort('region')">Region<i ng-show="results.sortBy == '-region'" class="fa fa-chevron-down"></i><i ng-show="results.sortBy == 'region'" class="fa fa-chevron-up"></i></th>
+        <th ng-click="results.toggleSort('producer')">Producer<i ng-show="results.sortBy == '-producer'" class="fa fa-chevron-down"></i><i ng-show="results.sortBy == 'producer'" class="fa fa-chevron-up"></i></th>
+        <th ng-click="results.toggleSort('name')">Name<i ng-show="results.sortBy == 'name'" class="fa fa-chevron-down"></i><i ng-show="results.sortBy == '-name'" class="fa fa-chevron-up"></i></th>
+        <th ng-click="results.toggleSort('rating')">Rating<i ng-show="results.sortBy == '-rating'" class="fa fa-chevron-down"></i><i ng-show="results.sortBy == 'rating'" class="fa fa-chevron-up"></i></th>
+        <th ng-click="results.toggleSort('price')">Price<i ng-show="results.sortBy == '-price'" class="fa fa-chevron-down"></i><i ng-show="results.sortBy == 'price'" class="fa fa-chevron-up"></i></th>
       </thead>
       <tbody>
         <tr ng-repeat="whisky in results.visibleWhiskies | limitTo: 10 | orderBy: results.sortBy">
