--- a/app/views/producer_templates/show.html.erb
+++ b/app/views/producer_templates/show.html.erb
@@ -65,10 +65,10 @@
     </div>
     <div class="col-sm-6">
       <div class="chart-container">
-        <radar-chart chartTitle="Flavors" chartData="{{flavorNums}}"></radar-chart>
+        <radar-chartx chartTitle="Flavors" chartData="{{flavorNums}}"></radar-chart>
       </div>
       <div class="chart-container">
-        <radar-chart chartTitle="Flavor Comparison" chartData="{{flavorNums}}"></radar-chart>
+        <radar-chart chartTitle="Flavor Comparison" chartData="{{similarFlavors}}"></radar-chart>
       </div>
     </div>
   </div>
