add unshift to producersController to keep current producer at top of flavor data list

--- a/app/views/producer_templates/show.html.erb
+++ b/app/views/producer_templates/show.html.erb
@@ -65,7 +65,7 @@
     </div>
     <div class="col-sm-6">
       <div class="chart-container">
-        <radar-chart chartTitle="Compare to Similar Scotch" chartData="{{similarFlavors}}"></radar-chart>
+        <radar-chart chartTitle="Compare to Similar Scotch" currentProducer="{{producer.name}}" chartData="{{similarFlavors}}"></radar-chart>
       </div>
     </div>
   </div>
