--- a/app/views/producer_templates/show.html.erb
+++ b/app/views/producer_templates/show.html.erb
@@ -3,7 +3,7 @@
     <div class="col-sm-4 info">
       <div class="profile-buttons">
         <a class="btn btn-default pull-left" href="/"><i class="fa fa-chevron-left"></i> Back to list</a>
-        <a class="btn btn-default pull-right" href="/"><i class="fa fa-heart-o"></i> Add to Favorites</a>
+        <!--<a class="btn btn-default pull-right" href="/"><i class="fa fa-heart-o"></i> Add to Favorites</a>-->
       </div>
       <div class="info-text">
         <div class="producer-img-wrapper">
@@ -60,12 +60,12 @@
       </tbody>
     </table>
 
-    <pagination total-items="totalItems" ng-model="currentPage" max-size="10" class="pagination-sm" boundary-links="true" rotate="false" num-pages="numPages" ng-change="producer.setPage(currentPage)"></pagination>
+    <!--<pagination total-items="totalItems" ng-model="currentPage" max-size="10" class="pagination-sm" boundary-links="true" rotate="false" num-pages="numPages" ng-change="producer.setPage(currentPage)"></pagination>-->
 
     </div>
     <div class="col-sm-6">
       <div class="chart-container">
-        <radar-chart chartTitle="Compare to Similar Scotch" currentProducer="{{producer.name}}" chartData="{{similarFlavors}}"></radar-chart>
+        <radar-chart chartTitle="Compare Flavor to Similar Scotch" currentProducer="{{producer.name}}" chartData="{{similarFlavors}}"></radar-chart>
       </div>
     </div>
   </div>
