--- a/app/assets/stylesheets/producer_templates.css.scss
+++ b/app/assets/stylesheets/producer_templates.css.scss
@@ -28,6 +28,9 @@ $break-small: 600px;
   color: lighten($curious-blue, 30%);
   text-align: center;
   min-height: 450px;
+  &.whisky {
+    min-height: 0;
+  }
   @media screen and (max-width: $break-small) {
     border-radius: 0;
   }
