--- a/app/views/whisky_templates/index.html.erb
+++ b/app/views/whisky_templates/index.html.erb
@@ -7,10 +7,11 @@
       <div class="map-bg">
         <!-- <object class="map-bg-svg" type="image/svg+xml" data="/images/whisky-region-map-bg.svg" class="map background">
         </object> -->
-        <div class="" ng-controller="RegionsCtrl">
+        <div ng-controller="RegionsCtrl">
           <div ng-repeat="region in regions" class="region {{region.name}}">
-            <h3>{{region.name}}</h3>
+            <h3 class="map-heading">{{region.name}}</h3>
             <div ng-include="'/images/' + region.name + '.svg'" ng-click="results.getRegionWhiskies(region.id)" class="region-img"></div>
+
             <div class="overlay overlay-{{region.name}}" ng-show="results.showRegionDesc[{{region.id}}]" ng-click="results.hideRegionDescModal()">
               <div class="text">
               <h3>{{region.name}}</h3>
@@ -23,6 +24,7 @@
       </div><!-- /.map-bg -->
     </div><!-- /.col -->
   </div><!-- /.row -->
+
 
 <div class="row">
   <div class="col-sm-12 data-table">
