--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Scotch2</title>
+  <title>Scotchy | Explore Scotch by Age, Rating, Price and Flavor Profile</title>
   <link href='http://fonts.googleapis.com/css?family=Arimo:400,700,400italic|Racing+Sans+One|Forum' rel='stylesheet' type='text/css'>
   <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
   <%= stylesheet_link_tag    'application', media: 'all' %>
